# gtirb-pprinter

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.boost  CMakeLists.txt  CONTRIBUTING.md  ElfPrettyPrinter.cpp  README.md  _att_printer_8cpp.html  _att_printer_8cpp__incl.map  _att_printer_8cpp__incl.md5  _att_printer_8h.html  _att_printer_8h__dep__incl.map  _att_printer_8h__dep__incl.md5  _att_printer_8h__incl.map  _att_printer_8h__incl.md5  _att_printer_8h_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _disasm_data_8cpp.html  _disasm_data_8cpp__incl.map  _disasm_data_8cpp__incl.md5  _disasm_data_8h.html  _disasm_data_8h__dep__incl.map  _disasm_data_8h__dep__incl.md5  _disasm_data_8h__incl.map  _disasm_data_8h__incl.md5  _disasm_data_8h_source.html  _export_8h.html  _export_8h__dep__incl.map  _export_8h__dep__incl.md5  _export_8h_source.html  _intel_printer_8cpp.html  _intel_printer_8cpp__incl.map  _intel_printer_8cpp__incl.md5  _intel_printer_8h.html  _intel_printer_8h__dep__incl.map  _intel_printer_8h__dep__incl.md5  _intel_printer_8h__incl.map  (+92 more)
.ci/: Dockerfile.arch  Dockerfile.arch-clang  Dockerfile.arch-gcc  Dockerfile.centos8  Dockerfile.formatter  Dockerfile.manylinux2010  Dockerfile.static  Dockerfile.test-arch-package  Dockerfile.test-install  Dockerfile.test-ubuntu16-package  Dockerfile.test-ubuntu18-package  Dockerfile.ubuntu16  Dockerfile.ubuntu16-clang  Dockerfile.ubuntu16-gcc  Dockerfile.ubuntu18  Dockerfile.ubuntu18-clang  Dockerfile.ubuntu18-gcc  Dockerfile.ubuntu20  PKGBUILD  Vagrantfile.windows-build  build-linux.sh  build-windows.sh  build.py  gitlab-ci.yml  test-install.cpp
doc/doxy/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  preprocmd.py
driver/: CMakeLists.txt  Logger.h  binary_printer.cpp  main.cpp  pretty_printer.cpp
include/gtirb_layout/: Export.hpp  gtirb_layout.hpp  version.h.in
include/gtirb_pprinter/: AArch64PrettyPrinter.hpp  Arm64PrettyPrinter.hpp  ArmPrettyPrinter.hpp  Assembler.hpp  AttPrettyPrinter.hpp  AttPrinter.h  AttPrinter.hpp  AuxDataLoader.hpp  AuxDataSchema.hpp  AuxDataUtils.hpp  BinaryPrinter.hpp  ElfBinaryPrinter.hpp  ElfLinkerScriptPrinter.hpp  ElfPrettyPrinter.hpp  ElfPrinter.hpp  ElfVersionScriptPrinter.hpp  Export.hpp  FileUtils.hpp  Fixup.hpp  ForceLinking.hpp  GtirbUtils.hpp  IntelIcxPrettyPrinter.hpp  IntelPrettyPrinter.hpp  IntelPrinter.h  IntelPrinter.hpp  MasmPrettyPrinter.hpp  Mips32PrettyPrinter.hpp  PeBinaryPrinter.hpp  PePrettyPrinter.hpp  PrettyPrinter.h  PrettyPrinter.hpp  StringUtils.hpp  Syntax.hpp  aux_data_util.hpp  file_utils.hpp  string_utils.hpp  version.h.in
python/: CMakeLists.txt  setup.py.in  version.py.in
python/src/gtirb_pprinter/: __init__.py  __main__.py
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+13 more)
src/: AArch64PrettyPrinter.cpp  ArmPrettyPrinter.cpp  AttPrettyPrinter.cpp  AttPrinter.cpp  AttPrinter.h  BinaryPrinter.h  CMakeLists.txt  DataGroup.h  DisasmData.cpp  DisasmData.h  DisasmTypes.h  ElfBinaryPrinter.cpp  ElfBinaryPrinter.h  ElfPrettyPrinter.cpp  ElfPrinter.cpp  ElfPrinter.h  Export.h  GasPrinter.cpp  GasPrinter.h  IntelPrettyPrinter.cpp  IntelPrinter.cpp  IntelPrinter.h  MasmPrettyPrinter.cpp  NasmPrinter.cpp  NasmPrinter.h  PePrettyPrinter.cpp  PrettyPrinter.cpp  PrettyPrinter.h  Syntax.cpp  Syntax.h  Table.cpp  Table.h  string_utils.cpp  string_utils.h  version.h
src/gtirb_layout/: CMakeLists.txt  gtirb_layout.cpp
src/gtirb_layout/driver/: CMakeLists.txt  gtirb_layout.cpp
src/gtirb_layout/test/: CMakeLists.txt  layout_test.cpp
src/gtirb_pprinter/: AArch64PrettyPrinter.cpp  Arm64PrettyPrinter.cpp  ArmPrettyPrinter.cpp  Assembler.cpp  AttPrettyPrinter.cpp  AuxDataLoader.cpp  AuxDataUtils.cpp  BinaryPrinter.cpp  CMakeLists.txt  ElfBinaryPrinter.cpp  ElfPrettyPrinter.cpp  ElfVersionScriptPrinter.cpp  FileUtils.cpp  Fixup.cpp  GtirbUtils.cpp  IntelIcxPrettyPrinter.cpp  IntelPrettyPrinter.cpp  MasmPrettyPrinter.cpp  Mips32PrettyPrinter.cpp  PeBinaryPrinter.cpp  PePrettyPrinter.cpp  PrettyPrinter.cpp  Registration.cpp  StringUtils.cpp  Syntax.cpp  aux_data_util.cpp  file_utils.cpp  string_utils.cpp
src/gtirb_pprinter/driver/: CMakeLists.txt  Logger.h  binary_printer.cpp  parser.cpp  parser.hpp  pretty_printer.cpp  printing_paths.cpp  printing_paths.hpp
src/gtirb_pprinter/test/: CMakeLists.txt  libraries_test.cpp  parser_test.cpp  test_main.cpp
src/test/: CMakeLists.txt  PrettyPrinter.test.cpp
tests/: ConsoleApplication1.exe.gtirb  arm32_syntax_test.py  arm64_adr_to_adrp_test.py  arm64_edge_case_test.py  arm64_syntax_test.py  att_printer_test.py  att_syntax_test.py  back_compat_test.py  binary_printer_end2end_test.py  binary_printer_win32_end2end_test.py  block_alignment_test.py  dummyso.py  dynamic_link_test.py  elf_binary_printer_test.py  ex1.gtirb  function_test.py  gtirb_helpers.py  hello_world.py  hello_world_win32.gtirb  intel_syntax_test.py  ipcmk  ipcmk.gtirb  mips_syntax_test.py  multi_module_test.py  name_conflict_test.py  pe_binary_printer_test.py  pprinter_end2end_test.py  pprinter_helpers.py  printing_policy_test.py  project1.exe.gtirb  requirements.txt  syntax_test.py  test_avx512_att.gtirb  test_avx512_att.s  two_modules.gtirb
tests/dummyso_libs/: Makefile  README.md  a.s  b.s
tests/fakebin/: fakeprog.py
tests/fakebin_llvm/: llvm-config
tests/fakebin_llvm/fake_llvm_installation/: llvm-dlltool
